--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 
   <iframe 
  class="" 
- src="https://docs.google.com/spreadsheets/u/1/d/1rwq766FFm2QDdHH7SL4nOBTBtfPHoo-OVU14igYH7Ns/htmlembed?single=true&gid=444186067&range=A1:U21&widget=false&chrome=false&headers=false"
+ rel="nofollow" 
+ style="background-color:#111111; 
+		align:center; 
+		text-align:center; 
+		frameborder='0';
+		scrolling='no';
+		overflow-x: hidden;
+		overflow-Y:hidden;
+		border:none;
+        
+		-ms-zoom: 0.1;
+        -moz-transform: scale(0.1);
+        -moz-transform-origin: 0 0;
+        -o-transform: scale(0.1);
+        -o-transform-origin: 0 0;
+        -webkit-transform: scale(100%);
+        -webkit-transform-origin: 0 0;"
+width="1115"
+height="1100"
+frameborder="0"
+marginheight="0"
+marginwidth="0"
+scrolling="no"
+		src="https://docs.google.com/spreadsheets/u/1/d/1rwq766FFm2QDdHH7SL4nOBTBtfPHoo-OVU14igYH7Ns/htmlembed?single=true&gid=444186067&range=A1:U21&widget=false&chrome=false&headers=false"
 ></iframe>
